Geometry Nodes: Parameters with animation data inside of a nested nodegroup don't trigger modifier evaluation on frame change #95006

Closed
opened 2022-01-18 12:16:23 +01:00 by Simon Thommes · 4 comments
Member

System Information
Operating system: Linux-5.15.11-76051511-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-17 09:34, hash: e15449623d
Worked: unknown

Short description of error
Animated parameters inside of a nested nodegroup don't seem to trigger a modifier evaluation on frame change. See video:
geonodes_nodegroup_evaluation-2022-01-18_12.12.38.mp4

Exact steps for others to reproduce the error
File:
geonodes_nodegroup_evaluation.blend

**System Information** Operating system: Linux-5.15.11-76051511-generic-x86_64-with-glibc2.34 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-17 09:34, hash: `e15449623d` Worked: unknown **Short description of error** Animated parameters inside of a nested nodegroup don't seem to trigger a modifier evaluation on frame change. See video: [geonodes_nodegroup_evaluation-2022-01-18_12.12.38.mp4](https://archive.blender.org/developer/F12809931/geonodes_nodegroup_evaluation-2022-01-18_12.12.38.mp4) **Exact steps for others to reproduce the error** File: [geonodes_nodegroup_evaluation.blend](https://archive.blender.org/developer/F12809932/geonodes_nodegroup_evaluation.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

This issue was referenced by 9f8ae130af

This issue was referenced by 9f8ae130af4082538f5859f39439cf3b6b52873e
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2022-01-18 12:58:45 +01:00

Added subscriber: @GeorgiaPacific

Added subscriber: @GeorgiaPacific
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95006
No description provided.